# stepik_fproject

./: README.md  pyproject.toml  test_main_page.py  test_product_page.py
pages/: base_page.py  basket_page.py  locators.py  login_page.py  main_page.py  product_page.py
