[tool.poetry]
name = "stepik-fproject"
version = "0.1.0"
description = ""
authors = ["Nurseitov Rafael <nurseitovraphael26@gmail.com>"]
readme = "README.md"
packages = [{include = "stepik_fproject"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
